fixed overlap on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -363,7 +363,7 @@ animation:         @value;
 .red { background-color: #f07769; }
 
 .register-space {
-	height: 8vh;
+	height: 10vh;
 }
 
 .panel-register {
